@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=1
 PKG_MINOR=1
-PKG_REVISION=8
+PKG_REVISION=9
 PKG_BUILD=0
